<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@android:color/transparent"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frgmnt_set_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="12dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/frgmnt_set_cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:padding="1dp"
                app:cardBackgroundColor="#fdf"
                app:cardCornerRadius="4dp"
                app:cardElevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.275"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/frgmnt_set_ll_sotr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:orientation="vertical">

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/frgmnt_set_switch_start"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:paddingStart="15dp"
                            android:text="@string/set_start_service"
                            tools:ignore="RtlSymmetry" />

                        <com.google.android.material.switchmaterial.SwitchMaterial
                            android:id="@+id/frgmnt_set_switch_ac"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:paddingStart="15dp"
                            android:text="@string/set_alarm_clock"
                            tools:ignore="RtlSymmetry" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/set_working_days" />

                        <HorizontalScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="2"
                            android:scrollbars="none">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:background="@android:color/white"
                                android:orientation="horizontal">

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <com.google.android.material.textview.MaterialTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:text="@string/set_monday"
                                        tools:ignore="TooDeepLayout" />

                                    <com.google.android.material.checkbox.MaterialCheckBox
                                        android:id="@+id/frgmnt_set_cb_d1"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:minWidth="0dp"
                                        android:minHeight="0dp" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <com.google.android.material.textview.MaterialTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:text="@string/set_tuesday" />

                                    <com.google.android.material.checkbox.MaterialCheckBox
                                        android:id="@+id/frgmnt_set_cb_d2"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:minWidth="0dp"
                                        android:minHeight="0dp" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <com.google.android.material.textview.MaterialTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:text="@string/set_wednesday" />

                                    <com.google.android.material.checkbox.MaterialCheckBox
                                        android:id="@+id/frgmnt_set_cb_d3"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:minWidth="0dp"
                                        android:minHeight="0dp"

                                        />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <com.google.android.material.textview.MaterialTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:text="@string/set_thursday" />

                                    <com.google.android.material.checkbox.MaterialCheckBox
                                        android:id="@+id/frgmnt_set_cb_d4"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:minWidth="0dp"
                                        android:minHeight="0dp" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <com.google.android.material.textview.MaterialTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:text="@string/set_friday" />

                                    <com.google.android.material.checkbox.MaterialCheckBox
                                        android:id="@+id/frgmnt_set_cb_d5"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:minWidth="0dp"
                                        android:minHeight="0dp" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <com.google.android.material.textview.MaterialTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:text="@string/set_saturday" />

                                    <com.google.android.material.checkbox.MaterialCheckBox
                                        android:id="@+id/frgmnt_set_cb_d6"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:minWidth="0dp"
                                        android:minHeight="0dp" />
                                </LinearLayout>

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:orientation="vertical">

                                    <com.google.android.material.textview.MaterialTextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:text="@string/set_sunday" />

                                    <com.google.android.material.checkbox.MaterialCheckBox
                                        android:id="@+id/frgmnt_set_cb_d7"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:minWidth="0dp"
                                        android:minHeight="0dp" />

                                </LinearLayout>

                            </LinearLayout>


                        </HorizontalScrollView>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="horizontal">

                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/frgmnt_set_but_start"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="2dp"
                                android:layout_weight="1"
                                android:foreground="?android:attr/selectableItemBackground"
                                android:text="@string/set_start_time"
                                android:theme="@style/ButtonStyle" />


                            <com.google.android.material.button.MaterialButton
                                android:id="@+id/frgmnt_set_but_end"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="2dp"
                                android:layout_weight="1"
                                android:foreground="?android:attr/selectableItemBackground"
                                android:text="@string/set_end_time"
                                android:theme="@style/ButtonStyle" />

                        </LinearLayout>

                        <com.google.android.material.textfield.TextInputLayout

                            android:id="@+id/frgmnt_set_md_l"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:minWidth="200dp"
                            android:textColorHint="#aaa">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/frgmnt_set_md_et"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="5dp"
                                android:hint="@string/set_min_dist"
                                android:inputType="number"
                                android:maxLines="1"
                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout

                            android:id="@+id/frgmnt_set_accur_l"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:minWidth="200dp"
                            android:textColorHint="#aaa">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/frgmnt_set_accur_et"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="5dp"
                                android:hint="@string/set_accuracy"
                                android:inputType="number"
                                android:maxLines="1"
                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout

                            android:id="@+id/frgmnt_set_time_ac_l"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:minWidth="200dp"
                            android:textColorHint="#aaa">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/frgmnt_set_time_ac_et"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="5dp"
                                android:hint="@string/set_wait_accuracy_time"
                                android:inputType="number"
                                android:maxLines="1"
                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout

                            android:id="@+id/frgmnt_set_time_povtor_l"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:minWidth="200dp"
                            android:textColorHint="#aaa">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/frgmnt_set_time_povtor_et"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_vertical"
                                android:layout_margin="5dp"
                                android:hint="@string/set_periodic_time"
                                android:inputType="number"
                                android:maxLines="1"
                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>